--- a/about.html
+++ b/about.html
@@ -6,7 +6,13 @@
     <title>
       Smt Z.S. Patel College of Management And Technology - Vidhya Kunj Sankul
     </title>
-    <link rel="stylesheet" href="/css/stylee.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="shortcut icon"
+      href="https://www.google.com/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
@@ -16,38 +22,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <section class="sub-header">
       <nav>
-        <a href="index.html"
-          ><img class="nav-img" src="/img/z.s patel.png"
-        /></a>
-        <div class="nav-links" id="navLinks">
-          <i class="fa fa-times" onclick="hidemenu()"></i>
+        <a href="index.html"><img src="z.s patel.png" /></a>
+        <div class="nav-links">
           <ul>
-            <li><a href="/htmlfiles/index.html">HOME</a></li>
-            <li><a href="/htmlfiles/about.html">ABOUT</a></li>
-            <li><a href="/htmlfiles/course.html">COURSE</a></li>
-            <li><a href="/htmlfiles/blog.html">BLOG</a></li>
-            <li><a href="/htmlfiles/contact.html">CONTACT</a></li>
-            <li>
-              <a
-                href="https://zspatelcollege.co.in/evidya/login.php"
-                target="_blank"
-                >eVidya Login</a
-              >
-            </li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="course.html">COURSE</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
-        <i class="fa fa-bars" onclick="showmenu()"></i>
       </nav>
 
       <h1>About Us</h1>
@@ -78,7 +66,7 @@
           >
         </div>
         <div class="about-col">
-          <img src="/img/z,s patel.jpg" />
+          <img src="z,s patel.jpg" />
         </div>
       </div>
 
@@ -98,7 +86,7 @@
           </p>
         </div>
         <div class="about-col">
-          <img src="/img/chairman.jpg" />
+          <img src="chairman.jpg" />
         </div>
       </div>
 
@@ -128,22 +116,35 @@
           </p>
         </div>
         <div class="about-col">
-          <img src="/img/principal.png" />
+          <img src="principal.png" />
         </div>
       </div>
     </section>
+
+    <!------------footer-->
+
+    <section class="footer">
+      <h4>About Us</h4>
+      <p>
+        Welcome to SMT Z.S Patel College of Management And Technology , a
+        vibrant institution dedicated to nurturing intellectual growth,
+        fostering innovation, <br />
+        and shaping future leaders. Situated at the heart of, our college stands
+        as a beacon of educational excellence, <br />
+        where knowledge meets inspiration.
+      </p>
+      <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-skype"></i>
+      </div>
+      <p class="dev">
+        Developed By <i class="fa-solid fa-user" style="color: #999"></i>
+        <span> <a href="#"> Hardik Kamaliya</a></span>
+      </p>
+    </section>
   </body>
-
-  <!------------------------ JS FOR TOGGLE MENU --------------->
-  <script>
-    var navLinks = document.getElementById("navLinks");
-
-    function showmenu() {
-      navLinks.style.right = "0";
-    }
-
-    function hidemenu() {
-      navLinks.style.right = "-200px";
-    }
-  </script>
 </html>
